# nsnake

./: .clang-format  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  application.cpp  application.h  context.h  game.cpp  game.h  geometry.h  io.cpp  io.h  main.cpp  menu.cpp  menu.h  scene.cpp  scene.h  utils.cpp  utils.h  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake.yml  lint.yml
app/: context.h  scene.h  scene_map.h
scenes/: game.cpp  game.h  menu.cpp  menu.h
src/: Application.h  CMakeLists.txt  ProgramInfo.h  main.cpp
src/App/: Context.h  Scene.h  SceneMap.h
src/Game/: Clock.h  Entities.h  Food.h  Player.h  TileData.h  TileMatrix.h  Time.h
src/Scenes/: Game.h  GameScene.h  Kill.h  KillScene.h  Menu.h  MenuScene.h
src/Utils/: Geometry.h  IO.h  Random.h  Window.h
utils/: geometry.h  io.h  window.h
