add_executable(nSnake main.cpp
        App/Context.h
        App/Scene.h
        Application.h
        Game/Clock.h
        Game/Food.h
        Game/Player.h
        Game/TileMatrix.h
        ProgramInfo.h
        Scenes/GameScene.h
        Scenes/KillScene.h
        Scenes/MenuScene.h
        Utils/Geometry.h
        Utils/IO.h
        Utils/Random.h
        Utils/Window.h
)
target_compile_definitions(nSnake
        PRIVATE NSNAKE_VERSION=\"${CMAKE_PROJECT_VERSION}\")
target_include_directories(nSnake
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CURSES_INCLUDE_DIRS})
target_link_libraries(nSnake
        PRIVATE
        ${CURSES_LIBRARIES}
        argparse::argparse)
target_precompile_headers(nSnake
        PRIVATE
        "<argparse/argparse.hpp>"
        "<curses.h>"
)
